[package]
description = 'The rental logic'
edition = '2018'
name = 'pallet-gameland'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
pallet-ormlnft = {path = "../orml-nft", default-features = false}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
sp-std = {default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12'}

frame-benchmarking = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false, optional = true}

frame-support = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false}
frame-system = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false}
sp-core = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false}
sp-io = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false}
sp-runtime = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false}

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
  'codec/std',
  'scale-info/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
