[package]
description = "Non-fungible token pallet provides basic functions to create and manager NFT"
edition = '2018'
name = 'pallet-ormlnft'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12'}
frame-system = {default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12'}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.124", optional = true}
sp-runtime = {default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12'}
sp-std = {default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12'}

[dev-dependencies]
sp-core = {git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12'}
sp-io = {git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12'}

[features]
default = ['std']
std = [
  "serde",
  "codec/std",
  'sp-std/std',
  "sp-runtime/std",
  'frame-support/std',
  'frame-system/std',
]
try-runtime = ["frame-support/try-runtime"]